@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST exo-0.3.92.tar.bz2 1398751 RMD160 6f4b02eb56b94968c383d915eab038226e2f91a9 SHA1 61a7090f175157bbc4817903c7cae52a20ec3a70 SHA256 585f6c433ad4e0bd7dcb2aa98456cca30562ddd864bac2bb4b4338a0939d7064
-EBUILD exo-0.3.92.ebuild 993 RMD160 338937376faaebe14e165d20940b79684fcb1c74 SHA1 ed0490f8813ce0d7e517d2504c15340ce7ce1f54 SHA256 07a91d3a55edaad059becdb31d6b05a4743ac6b0662ca02adaba28ec898485d4
-EBUILD exo-9999.ebuild 972 RMD160 f7dad4d7a578aa6a75861ccfff993b5e7d3f29c7 SHA1 d30c7e4378a9020f5033704f4791c070cd023a22 SHA256 4953aebe3e7cb59153e9117af53fc1f07033238a4ce31b8ad6bc864648aa3856
-MISC ChangeLog 1115 RMD160 3ac5481fec77c8ac40d0a4b25daaabdd526555f9 SHA1 eccea6266a57b267be10cc4d0a05f97949be6b37 SHA256 e65724dd9cee2e0cf61eb535f64bc8374308af4af2a07caf27b107c795ea0adc
+EBUILD exo-0.3.92.ebuild 1010 RMD160 7932c027f00ce1e5a5bab603565e9c64ea1d237e SHA1 a26c3098df5f73942fea007423e8553d8f9072b0 SHA256 1b73f39e2747dc01a1457986890eebdd86bcb5404bfacf772ce897774c40a6b7
+EBUILD exo-9999.ebuild 989 RMD160 036772bec8e89ed7c222aa6dce391d371de5b453 SHA1 42814b52e5ae77a67b77e65d4f968ee003509e50 SHA256 6189b23314b49f7741888b0f32e9f70064243a253c0fe19ecb2e2a1ff9784749
+MISC ChangeLog 1239 RMD160 aea72629915c6111942c7b346650f35a5098e819 SHA1 d0253d14adbebe4207e666b6c9843e6e9d97e72a SHA256 4c9a8e8b7559f4c73766a0ff412f513b0d68761a3a5071910f11b73ba238e3cd
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkdteoACgkQKhnDs22gwa8wHwCfbGOAbg1QHtUqM5FPyhzh3Upf
-bh0An1aYRoNg5Zvtmsy201Nfiomk6BVA
-=m+rf
+iEYEARECAAYFAkkhtgQACgkQKhnDs22gwa9J4ACcDBEqFSe+L6ICa0fgp/FeSpAh
+0T0AnR5eh6g9/J0/dyg4eXwarrBFXLU3
+=m6Ym
 -----END PGP SIGNATURE-----
